--- a/app/src/main/res/layout/view_question.xml
+++ b/app/src/main/res/layout/view_question.xml
@@ -60,13 +60,21 @@
         android:textColor="@color/text_black"
         android:textSize="@dimen/text_noraml_l" />
 
-    <LinearLayout
-        android:id="@+id/ll_input"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/bg_input"
-        android:minHeight="50dp"
-        android:orientation="vertical" />
+        android:layout_margin="5dp"
+        android:elevation="5dp">
+
+        <com.xiao.rtclassteacher.widget.MathInputContainer
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
+            android:minHeight="50dp"
+            android:orientation="vertical" />
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
