--- a/app/src/main/res/layout/widget_drawer_header.xml
+++ b/app/src/main/res/layout/widget_drawer_header.xml
@@ -31,7 +31,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/username"
