--- a/app/src/main/res/layout/widget_sqrt.xml
+++ b/app/src/main/res/layout/widget_sqrt.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
-        android:background="@color/divider"
+        android:background="@null"
         android:gravity="center"
         android:imeOptions="actionNext"
         android:inputType="number"
