--- a/app/src/main/res/layout/widget_x_bottom.xml
+++ b/app/src/main/res/layout/widget_x_bottom.xml
@@ -8,7 +8,6 @@
         android:id="@+id/ll_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/divider"
         android:gravity="center_vertical">
 
         <EditText
@@ -24,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/ll_main"
         android:layout_toRightOf="@id/ll_main"
-        android:background="@color/divider"
+        android:background="@null"
         android:imeOptions="actionNext"
         android:inputType="number"
         android:minWidth="10dp"
