--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -152,14 +152,14 @@
             android:text="还没有账号？点击注册"
             android:textColor="?attr/colorPrimary" />
 
-        <Button
-            android:id="@+id/btn_stu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="我是学生"
-            android:textColor="@color/text_black"
-            android:textSize="20sp" />
+        <!--<Button-->
+            <!--android:id="@+id/btn_stu"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:text="我是学生"-->
+            <!--android:textColor="@color/text_black"-->
+            <!--android:textSize="20sp" />-->
     </LinearLayout>
 
 </LinearLayout>
