--- a/app/src/main/res/layout/class_list_item.xml
+++ b/app/src/main/res/layout/class_list_item.xml
@@ -7,9 +7,11 @@
         android:id="@+id/class_image"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_alignBottom="@+id/member_count"
+        android:layout_marginEnd="29dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@mipmap/head" />
+        android:layout_toStartOf="@+id/btn_homework"
+        android:src="@mipmap/avatar" />
 
     <TextView
         android:id="@+id/class_name"
@@ -114,7 +116,7 @@
         android:layout_marginRight="20dp"
         android:layout_toLeftOf="@id/btn_class_notice"
         android:background="@mipmap/btn"
-        android:text="作业提交：40/45" />
+        android:text="作业提交" />
 
     <TextView
         android:layout_width="match_parent"
