--- a/app/src/main/res/layout/homework_list_item.xml
+++ b/app/src/main/res/layout/homework_list_item.xml
@@ -9,7 +9,7 @@
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        android:src="@mipmap/head" />
+        android:src="@mipmap/avatar" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -26,7 +26,7 @@
         android:id="@+id/tv_condition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@id/tv_name"
+        android:layout_alignLeft="@id/tv_name"
         android:layout_below="@id/tv_name"
         android:layout_marginTop="5dp"
         android:text="已提交"
