--- a/app/src/main/res/layout/widget_drawer_header.xml
+++ b/app/src/main/res/layout/widget_drawer_header.xml
@@ -19,7 +19,7 @@
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/email"
+        android:layout_above="@+id/phone"
         android:layout_alignLeft="@+id/profile_image"
         android:layout_alignStart="@+id/profile_image"
         android:layout_marginLeft="10dp"
@@ -39,7 +39,6 @@
         android:layout_alignStart="@+id/username"
         android:layout_marginBottom="8dp"
         android:gravity="left"
-        android:text="15680026666"
         android:textColor="@color/text_white"
         android:textSize="@dimen/text_noraml_s" />
 
@@ -49,8 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginRight="20dp"
         android:text="教师"
         android:textColor="@color/text_white"
         android:textSize="@dimen/text_small" />
