--- a/app/src/main/res/menu/menu_tool.xml
+++ b/app/src/main/res/menu/menu_tool.xml
@@ -3,22 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activity.QuestionDisplayActivity">
-
     <item
-        android:id="@+id/action_edit"
-        android:orderInCategory="80"
-        android:title="action_edit"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/action_share"
-        android:orderInCategory="90"
-        android:title="action_edit"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_submit"
         android:orderInCategory="100"
-        android:title="action_settings"
+        android:title="submit"
         app:showAsAction="always" />
 </menu>
