--- a/app/src/main/res/layout/view_question.xml
+++ b/app/src/main/res/layout/view_question.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:text="题号："
+            android:text="题目ID："
             android:textColor="@color/text_black"
             android:textSize="@dimen/text_noraml" />
 
